Some work on making the CloudProxy-Cloud link resilient to the network connection on the NVR changing between ethernet and Wi-Fi and back. Still a bit flakey but improving. The change back to Wi-Fi when the ethernet plug is removed can be a bit problematic.

--- a/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.scss
+++ b/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.scss
@@ -37,15 +37,15 @@ mat-form-field.password-field
 span.connecting-spinner {
   display: flex;
   > mat-spinner {
-    margin-right: 1rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
   }
 }
 
 div.connecting-spinner {
   display: flex;
   > mat-spinner {
-    position: relative;
-    top: 0.3rem;
-    left: 0.5rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
   }
 }
