--- a/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.html
+++ b/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.html
@@ -6,20 +6,25 @@
         You have an Ethernet connection, but your NVR is connected to the Cloud service through Wi-Fi.
         To make changes to the Wi-Fi settings, this connection must be through Ethernet. To switch the connection to
         Ethernet,
-        click the Reset Connection button, then log in again.
+        click the Reset Connection button, then wait until display shows the current Wi-Fi status again.
       </div>
 
       <div class="alert-warning-embedded" *ngIf="ethernetConnectionStatus == 'NO_ETHERNET'">
         You have no Ethernet connection available,
         To make changes to the Wi-Fi settings, the NVR must be connected to the Cloud Service through Ethernet.
         To switch the connection to Ethernet, connect an Ethernet cable between your router and the NVR then
-        click the Reset Connection button, then log in again.
+        click the Reset Connection button, then wait until display shows the current Wi-Fi status again.
       </div>
-      <div class="reset-connection-button">
+      <div class="reset-connection-button connecting-spinner">
         <button *ngIf="ethernetConnectionStatus != 'CONNECTED_VIA_ETHERNET' && ethernetConnectionStatus != ''"
                 color="warning" mat-flat-button
                 (click)="resetConnection()">Reset Connection
         </button>
+        <ng-container *ngIf="resetting">
+
+            <mat-spinner [diameter]="25"></mat-spinner>
+            Restarting Cloud Proxy
+        </ng-container>
       </div>
       <app-reporting [embedded]="true"></app-reporting>
       <mat-checkbox [color]="'primary'" [checked]="wifiEnabled"
@@ -65,7 +70,10 @@
                 (click)="connect()">Connect
         </button>
         <ng-container *ngIf="connecting">
-            <mat-spinner [diameter]="25">Connecting to {{selector.value}}</mat-spinner>
+          <span class="connecting-spinner">
+            <mat-spinner [diameter]="25"></mat-spinner>
+            Connecting to {{selector.value}}
+          </span>
         </ng-container>
       </div>
     </mat-card-content>
