Some fixes for cleaner switching between network devices on the NVR

--- a/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.html
+++ b/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.html
@@ -17,6 +17,7 @@
       </div>
       <div class="reset-connection-button connecting-spinner">
         <button *ngIf="ethernetConnectionStatus != 'CONNECTED_VIA_ETHERNET' && ethernetConnectionStatus != ''"
+                [disabled]="resetting"
                 color="warning" mat-flat-button
                 (click)="resetConnection()">Reset Connection
         </button>
