Allow setting Wi-Fi access point without an ethernet connection. This is because the existing Wi-Fi setting is retained if the attempt to connect to a new one fails.

--- a/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.scss
+++ b/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.scss
@@ -35,6 +35,8 @@ mat-form-field.password-field
 }
 
 span.connecting-spinner {
+  position: relative;;
+  top: 0.5rem;
   display: flex;
   > mat-spinner {
     margin-right: 0.5rem;
