Fix bad error messages which occurred when the camera credentials were wrong, and you used the snapshot facility in the config setup or view/set Camera parameters.

--- a/cloudFrontEnd/src/app/reporting/reporting.component.html
+++ b/cloudFrontEnd/src/app/reporting/reporting.component.html
@@ -14,7 +14,7 @@
     {{warning}}
   </div>
   <div *ngIf="!success && error?.status != 400">
-    <div *ngIf="error?.status != 0">Error status: {{error?.status}}</div>
+    <div *ngIf="error !== undefined && error?.status !== undefined && error?.status != 0">Error status: {{error?.status}}</div>
     <br>
     <div *ngIf="showMessageInError">{{error?.error}}</div>
     <div *ngIf="!showMessageInError">See logs for more information</div>
