--- a/cloudFrontEnd/src/app/config-setup/config-setup.component.html
+++ b/cloudFrontEnd/src/app/config-setup/config-setup.component.html
@@ -140,6 +140,32 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="ptzControls">
+        <th mat-header-cell *matHeaderCellDef>PTZ Controls.</th>
+        <td mat-cell *matCellDef="let cam; let i = dataIndex">
+          <mat-checkbox [formControl]="getCamControl(i, 'ptzControls')"
+                        matTooltip="The Pan Tilt and Zoom controls for {{cam.key}} will be present on the live stream view if checked."
+                        matTooltipClass="tooltip"
+                        (change)="updateCamField(i, 'ptzControls')">
+          </mat-checkbox>
+          <mat-error *ngIf="getCamControl(i, 'ptzControls').invalid">Set the PTZ status</mat-error>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="onvifHost">
+        <th mat-header-cell *matHeaderCellDef>ONVIF Base Address.</th>
+        <td mat-cell *matCellDef="let cam; let i = dataIndex">
+          <mat-form-field appearance="legacy" [style.width.px]="200">
+            <input matInput type="text" autocomplete="off" maxlength="22"
+                   [formControl]="getCamControl(i, 'onvifHost')"
+                   matTooltip="The IP address and port (if not 80) for {{cam.key}} ONVIF operations. This is required if PTZ control is enabled for {{cam.key}}."
+                   matTooltipClass="tooltip"
+                   placeholder="ONVIF Host" (change)="updateCamField(i, 'onvifHost')">
+            <mat-error *ngIf="getCamControl(i, 'onvifHost').invalid">Enter the ONVIF base address</mat-error>
+          </mat-form-field>
+        </td>
+      </ng-container>
+
       <!-- Expanded Streams Column - The streams row is made up of this one column that spans across all columns -->
       <ng-container matColumnDef="expandedStreamDetail">
         <td mat-cell *matCellDef="let cam; let camIndex=dataIndex" [attr.colspan]="cameraColumns.length">
