--- a/cloudFrontEnd/src/app/camera-params/camera-params.component.html
+++ b/cloudFrontEnd/src/app/camera-params/camera-params.component.html
@@ -8,7 +8,7 @@
     </mat-card-content>
     <mat-card-content [ngStyle]="downloading ? {display: 'none'} : {display: 'block'}">
       <div [formGroup]="camControlFormGroup">
-        <div>
+        <div *ngIf="camType() === cameraTypes.sv3c">
         <mat-form-field appearance="legacy">
           <mat-label>Infra Red Status</mat-label>
           <mat-select formControlName="irselector">
@@ -25,6 +25,41 @@
           <mat-hint>Select required infra red status</mat-hint>
           <mat-error *ngIf="hasError('irselector', 'required')">Infra red status is required</mat-error>
         </mat-form-field>
+        </div>
+        <div *ngIf="camType() !== cameraTypes.sv3c">
+          <div>
+            <mat-form-field appearance="legacy">
+              <mat-label>Night Vision Mode</mat-label>
+              <mat-select formControlName="lampStatus">
+                <mat-option value="0">
+                  Normal
+                </mat-option>
+                <mat-option value="1">
+                  Full Colour
+                </mat-option>
+                <mat-option value="2">
+                  Intelligent
+                </mat-option>
+              </mat-select>
+              <mat-hint>Select required night vision mode</mat-hint>
+              <mat-error *ngIf="hasError('lampStatus', 'required')">Infra red status is required</mat-error>
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field appearance="legacy">
+              <mat-label>WDR</mat-label>
+              <mat-select formControlName="wdrStatus">
+                <mat-option value="off">
+                  Off
+                </mat-option>
+                <mat-option value="on">
+                  On
+                </mat-option>
+              </mat-select>
+              <mat-hint>Select Wide Dynamic Range mode</mat-hint>
+              <mat-error *ngIf="hasError('wdrStatus', 'required')">Infra red status is required</mat-error>
+            </mat-form-field>
+          </div>
         </div>
         <div>
           <mat-form-field appearance="standard">
@@ -45,8 +80,6 @@
             <mat-error *ngIf="hasError('dateFormat', 'required')">Camera name is required</mat-error>
             <mat-error *ngIf="hasError('dateFormat', 'maxlength')">Max camera name length exceeded</mat-error>
           </mat-form-field>
-        </div>
-        <div>
           <mat-form-field appearance="standard">
             <mat-label>Start Date</mat-label>
             <input matInput type="text" formControlName="startDate"
@@ -61,8 +94,6 @@
                    placeholder="Software Version">
             <mat-hint>Read only value</mat-hint>
           </mat-form-field>
-        </div>
-        <div>
           <mat-form-field appearance="standard">
             <mat-label>Model</mat-label>
             <input matInput type="text" formControlName="model"
@@ -72,7 +103,26 @@
          </div>
       </div>
       <div class="button-container">
-        <button mat-flat-button (click)="updateParams()" [disabled]="!anyChanged() || anyInvalid()" color="warning">Update</button>
+        <button *ngIf="!_confirmReboot" mat-flat-button (click)="updateParams()" [disabled]="!anyChanged() || anyInvalid()"
+                matTooltip="{{(!anyChanged() || anyInvalid()) ? 'Ensure all fields are correct and complete before committing' : 'Click to commit the changes'}}"
+                matTooltipClass="tooltip"
+                color="warning">Update
+        </button>
+        <button *ngIf="_confirmReboot" mat-flat-button (click)="reboot()" [disabled]="(!anyChanged() || anyInvalid()) && !_confirmReboot"
+                matTooltip="Click to proceed with rebooting this camera"
+                matTooltipClass="tooltip"
+                color="warning">Reboot camera, Are you sure?
+        </button>
+        <button *ngIf="!_confirmReboot" mat-flat-button (click)="confirmReboot()" [disabled]="anyChanged() || anyInvalid()"
+                matTooltip="Click to reboot this camera"
+                matTooltipClass="tooltip"
+                color="warning">Reboot Camera
+        </button>
+        <button *ngIf="_confirmReboot" mat-flat-button (click)="cancelReboot()" [disabled]="anyChanged() || anyInvalid()"
+                matTooltip="Click to cancel reboot of this camera"
+                matTooltipClass="tooltip"
+                color="default">Cancel
+        </button>
       </div>
     </mat-card-content>
   </mat-card>
