--- a/cloudFrontEnd/src/app/config-setup/config-setup.component.html
+++ b/cloudFrontEnd/src/app/config-setup/config-setup.component.html
@@ -4,13 +4,15 @@
 
 <mat-card>
     <mat-card-title>Cameras Configuration
+    <span
+      matTooltip="Set or change the user name and password used to access the cameras. All cameras should have the same user name and password."
+      matTooltipClass="tooltip">
       <button class="change-password-button"
-              matTooltip="Set or change the user name and password used to access the cameras. All cameras should have the same user name and password."
-              matTooltipClass="tooltip"
               mat-icon-button
               (click)="togglePasswordDialogue()">
         <mat-icon>security</mat-icon>
       </button>
+    </span>
       <div class="password-dialogue">
         <div class="mat-elevation-z15" [@detailExpand]="showPasswordDialogue ? 'expanded' : 'collapsed'">
           <div>
@@ -93,21 +95,18 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="controlUri">
-        <th mat-header-cell *matHeaderCellDef>Control URI.</th>
+      <ng-container matColumnDef="cameraParamSpecs">
+        <th mat-header-cell *matHeaderCellDef>Camera Type.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="legacy" [style.width.px]="150">
+          <mat-form-field appearance="legacy" [style.width.px]="200">
             <!--Call setUpTableFormControls after  updateCamField on changed selection to ensure the address field
                 enabled state is updated.-->
-            <mat-select [formControl]="getCamControl(i, 'controlUri')"
-                        (selectionChange)="updateCamField(i, 'controlUri'); setUpTableFormControls()"
+            <mat-select [formControl]="getCamControl(i, 'cameraParamSpecs')"
+                        (selectionChange)="updateCamField(i, 'cameraParamSpecs'); setUpTableFormControls()"
                         matTooltip="Select the camera type to enable control of image text and infra red status from the web application. Set to 'None' to disable this feature, or if the camera type is not listed."
                         matTooltipClass="tooltip">
-              <mat-option [value]="''">
-                None
-              </mat-option>
-              <mat-option [value]="'web/cgi-bin/hi3510/param.cgi'">
-                For SV3C Cameras
+              <mat-option *ngFor="let spec of cameraSvc.cameraParamSpecs" [value]="spec">
+                  {{spec.name}}
               </mat-option>
             </mat-select>
           </mat-form-field>
@@ -131,7 +130,8 @@
         <th mat-header-cell *matHeaderCellDef>Snapshot URI.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
           <mat-form-field appearance="legacy" [style.width.px]="300">
-            <input matInput type="text" autocomplete="off" maxlength="55" [formControl]="getCamControl(i, 'snapshotUri')"
+            <input matInput type="text" autocomplete="off" maxlength="55"
+                   [formControl]="getCamControl(i, 'snapshotUri')"
                    matTooltip="The URI for snapshots for {{cam.key}}. This is used to view the image from the camera by clicking on the camera ID in the Cameras Configuration editor."
                    matTooltipClass="tooltip"
                    placeholder="Snapshot URI" (change)="updateCamField(i, 'snapshotUri')">
@@ -199,8 +199,13 @@
                            matTooltipClass="tooltip"
                            placeholder="Stream Description"
                            (change)="updateStreamField(camIndex, streamIndex, 'descr')">
-                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'descr').hasError('required')">Description is required</mat-error>
-                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'descr').hasError('pattern')">2-20 characters, no special characters</mat-error>
+                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'descr').hasError('required')">
+                      Description
+                      is required
+                    </mat-error>
+                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'descr').hasError('pattern')">2-20
+                      characters, no special characters
+                    </mat-error>
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -214,8 +219,12 @@
                            matTooltipClass="tooltip"
                            placeholder="Audio Bitrate"
                            (change)="updateStreamField(camIndex, streamIndex, 'audio_bitrate')">
-                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'audio_bitrate').hasError('required')">Audio bitrate is required</mat-error>
-                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'audio_bitrate').hasError('pattern')">Values 0,8000,16000,24000,32000,40000 or 48000 accepted</mat-error>
+                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'audio_bitrate').hasError('required')">
+                      Audio bitrate is required
+                    </mat-error>
+                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'audio_bitrate').hasError('pattern')">
+                      Values 0,8000,16000,24000,32000,40000 or 48000 accepted
+                    </mat-error>
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -228,8 +237,14 @@
                            matTooltip="Set the URI for connection to the camera stream. This is in the form 'rtsp://<ip address>/<uri>"
                            matTooltipClass="tooltip"
                            placeholder="Netcam URI" (blur)="updateStreamField(camIndex, streamIndex, 'netcam_uri')">
-                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'netcam_uri').hasError('pattern')">Should be: rtsp://[uri..]</mat-error>
-                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'netcam_uri').hasError('required')">Netcam URI is required</mat-error>
+                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'netcam_uri').hasError('pattern')">
+                      Should
+                      be: rtsp://[uri..]
+                    </mat-error>
+                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'netcam_uri').hasError('required')">
+                      Netcam
+                      URI is required
+                    </mat-error>
                   </mat-form-field>
 
                 </td>
@@ -303,7 +318,9 @@
                         <mat-icon>close</mat-icon>
                       </button>
                     </div>
-                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'mask_file')">Please select a valid .pgm file, or clear.</mat-error>
+                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'mask_file')">Please select a valid .pgm
+                      file, or clear.
+                    </mat-error>
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -316,7 +333,8 @@
                            matTooltip="The width in pixels of the video on {{stream.key}}. This is required if motion detection is enabled on {{stream.key}}."
                            matTooltipClass="tooltip"
                            placeholder="Video Width" (blur)="updateStreamField(camIndex, streamIndex, 'video_width')">
-                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex,'video_width').invalid">Valid: 90-5000</mat-error>
+                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex,'video_width').invalid">Valid: 90-5000
+                    </mat-error>
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -328,8 +346,10 @@
                            [formControl]="getStreamControl(camIndex, streamIndex,'video_height')"
                            matTooltip="The height in pixels of the video on {{stream.key}}. This is required if motion detection is enabled on {{stream.key}}."
                            matTooltipClass="tooltip"
-                           placeholder="Video Height" (blur)="updateStreamField(camIndex, streamIndex, 'video_height')">
-                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex,'video_height').invalid">Valid: 90-3000</mat-error>
+                           placeholder="Video Height"
+                           (blur)="updateStreamField(camIndex, streamIndex, 'video_height')">
+                    <mat-error *ngIf="getStreamControl(camIndex, streamIndex,'video_height').invalid">Valid: 90-3000
+                    </mat-error>
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -378,12 +398,15 @@
                   *ngIf="!confirmNewLookup && !confirmNewLookup">
             <mat-icon>explore</mat-icon>
           </button>
-          <button [disabled]="anyInvalid() || confirmNew || confirmNewLookup" mat-icon-button (click)="confirmSave=true"
-                  matTooltip="Commit the current configuration in this editor"
-                  matTooltipClass="tooltip"
+          <span matTooltip="Commit the current configuration in this editor"
+                matTooltipClass="tooltip">
+            <button [disabled]="anyInvalid() || confirmNew || confirmNewLookup" mat-icon-button
+                    (click)="confirmSave=true"
                   *ngIf="!confirmSave && !confirmNewLookup">
             <mat-icon>save</mat-icon>
           </button>
+          </span>
+
           <span class="confirm-group" *ngIf="confirmNew">
             <span>Start a new configuration, are you sure?</span>
             <button color="default" mat-flat-button (click)="confirmNew=false">
