--- a/cloudFrontEnd/src/app/live-container/ptzcontrols/preset-button/preset-button.component.html
+++ b/cloudFrontEnd/src/app/live-container/ptzcontrols/preset-button/preset-button.component.html
@@ -1,7 +1,7 @@
 <button class="preset-button" mat-mini-fab (click)="presetPressed()" [color]="operation != 0 ? 'warn' : 'accent'">
   <div>
     {{
-    presetId
+    presetNumber
     }}
   </div>
 </button>
