--- a/cloudFrontEnd/src/app/live-container/ptzcontrols/ptzcontrols.component.html
+++ b/cloudFrontEnd/src/app/live-container/ptzcontrols/ptzcontrols.component.html
@@ -55,13 +55,14 @@
       <mat-card-subtitle>Presets</mat-card-subtitle>
       <mat-card-subtitle class="smaller-text">{{presetFunctionDescription()}}</mat-card-subtitle>
       <div>
-        <app-preset-button *ngFor="let l of counter(maxPresets); let i=index" presetId="{{i+1}}"
+        <app-preset-button *ngFor="let l of counter(maxPresets); let i=index"
                            (click)="presetButtonPressed()"
                            [reporting]="reporting"
                            [camera]="camera"
-                           [presetId]="(i+1).toString()"
+                           [presetNumber]="(i+1).toString()"
+                           [presetInfo]="presetsInfo.presets[i]"
                            [operation]="presetOperation()"
-                           matTooltip="presetsTooltip(i+1)}}"
+                           matTooltip="{{presetsTooltip(i+1)}}"
                            matTooltipClass="tooltip">
         </app-preset-button>
       </div>
