Bring front end up to date with NVR (mp4f server, H265 support added).
(Re-)Disable WiFi setting when not connected via Ethernet (this is because a Wifi AP could be on an inaccessible sub net).

--- a/cloudFrontEnd/src/app/camera-params/camera-params.component.html
+++ b/cloudFrontEnd/src/app/camera-params/camera-params.component.html
@@ -114,7 +114,7 @@
                 color="warning">Reboot camera, Are you sure?
         </button>
         <button *ngIf="!_confirmReboot" mat-flat-button (click)="confirmReboot()" [disabled]="anyChanged() || anyInvalid()"
-                matTooltip="Click to reboot this camera"
+                matTooltip="{{'Click to reboot this camera'}}"
                 matTooltipClass="tooltip"
                 color="warning">Reboot Camera
         </button>
