--- a/cloudFrontEnd/src/app/config-setup/config-setup.component.html
+++ b/cloudFrontEnd/src/app/config-setup/config-setup.component.html
@@ -3,9 +3,9 @@
     can be found in the LICENSE file at http://angular.io/license -->
 
 <mat-card>
-    <mat-card-title>Cameras Configuration
+  <mat-card-title>Cameras Configuration
     <span
-      matTooltip="Set or change the user name and password used to access the cameras. All cameras should have the same user name and password."
+      matTooltip="{{'Set or change the user name and password used to access the cameras. All cameras should have the same user name and password.'}}"
       matTooltipClass="tooltip">
       <button class="change-password-button"
               mat-icon-button
@@ -13,19 +13,19 @@
         <mat-icon>security</mat-icon>
       </button>
     </span>
-      <div class="password-dialogue">
-        <div class="mat-elevation-z15" [@detailExpand]="showPasswordDialogue ? 'expanded' : 'collapsed'">
-          <div>
-          </div>
-          <app-credentials-for-camera-access
-            (hideDialogue)="togglePasswordDialogue()"
-            [reporting]="errorReporting">
-          </app-credentials-for-camera-access>
+    <div class="password-dialogue">
+      <div class="mat-elevation-z15" [@detailExpand]="showPasswordDialogue ? 'expanded' : 'collapsed'">
+        <div>
         </div>
+        <app-credentials-for-camera-access
+          (hideDialogue)="togglePasswordDialogue()"
+          [reporting]="errorReporting">
+        </app-credentials-for-camera-access>
       </div>
-    </mat-card-title>
-  <mat-card-content class="wait-box mat-form-field-flex" *ngIf="downloading">
-    <mat-spinner [diameter]="25"></mat-spinner>
+    </div>
+  </mat-card-title>
+    <mat-card-content class="wait-box mat-form-field-flex" *ngIf="downloading">
+      <mat-spinner [diameter]="25"></mat-spinner>
     <span>Loading, Please wait..</span>
   </mat-card-content>
   <mat-card-content class="wait-box mat-form-field-flex" *ngIf="updating">
@@ -35,7 +35,7 @@
   <mat-card-content class="wait-box mat-form-field-flex" *ngIf="discovering">
     <mat-spinner [diameter]="25"></mat-spinner>
     <span>Camera discovery active, Please wait..</span>
-  </mat-card-content>
+    </mat-card-content>
   <mat-card-content *ngIf="!downloading  && !updating && !discovering">
     <table mat-table
            [dataSource]="cameras | mapToKeyValue" multiTemplateDataRows
@@ -110,6 +110,19 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="ftp">
+        <th mat-header-cell *matHeaderCellDef>FTP From Camera.</th>
+        <td mat-cell *matCellDef="let cam; let i = dataIndex">
+          <mat-checkbox [formControl]="getCamControl(i, 'ftp')"
+                        [disabled]="getFTPDisabledState(cam.value)"
+                        matTooltip="{{motionSet(cam.value) ? 'To use FTP upload from the camera, you must not have motion selected on any stream.' :
+                        'If checked, make event recordings sent by FTP from '+ cam.key + ' available in the recordings selection.'}}"
+                        matTooltipClass="tooltip"
+                        (change)="updateCamField(i, 'ftp')">
+          </mat-checkbox>
+          <mat-error *ngIf="getCamControl(i, 'ftp').invalid">Set the FTP status</mat-error>
         </td>
       </ng-container>
 
@@ -192,7 +205,7 @@
               <ng-container matColumnDef="descr">
                 <th mat-header-cell *matHeaderCellDef> Descr.</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="legacy">
+            <mat-form-field appearance="legacy">
                     <input matInput type="text" autocomplete="off" maxlength="20"
                            [formControl]="getStreamControl(camIndex, streamIndex, 'descr')"
                            matTooltip="Set the description for {{stream.key}}. This is usually relating to the resolution of the stream."
@@ -206,7 +219,7 @@
                     <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'descr').hasError('pattern')">2-20
                       characters, no special characters
                     </mat-error>
-                  </mat-form-field>
+            </mat-form-field>
                 </td>
               </ng-container>
               <ng-container matColumnDef="audio_bitrate">
@@ -231,7 +244,7 @@
               <ng-container matColumnDef="netcam_uri">
                 <th mat-header-cell *matHeaderCellDef> Netcam URI.</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="legacy">
+            <mat-form-field appearance="legacy">
                     <input matInput type="text" autocomplete="off" maxlength="55"
                            [formControl]="getStreamControl(camIndex, streamIndex, 'netcam_uri')"
                            matTooltip="Set the URI for connection to the camera stream. This is in the form 'rtsp://<ip address>/<uri>"
@@ -264,8 +277,10 @@
                 <th mat-header-cell *matHeaderCellDef>Motion Sensing</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
                   <mat-checkbox [color]="'primary'" [checked]="stream.value.motion.enabled"
+                                [disabled]="ftpSet(cam.value)"
                                 (change)="setMotionStatus($event, stream.value,  cam.value)"
-                                matTooltip="If checked, motion detection and its consequent recording will be enabled on {{stream.key}}. Only one stream from a camera can have motion detection enabled. Where a camera has more than one stream, the lower resolution stream is best used for motion detection to keep CPU usage down."
+                                matTooltip="{{ftpSet(cam.value) ? 'To use internal motion sensing, you must uncheck FTP on the camera line' :
+                                'If checked, motion detection and its consequent recording will be enabled on ' + stream.key + '. Only one stream from a camera can have motion detection enabled. Where a camera has more than one stream, the lower resolution stream is best used for motion detection to keep CPU usage down.'}}"
                                 matTooltipClass="tooltip">
                     {{'Motion'}}
                   </mat-checkbox>
@@ -282,14 +297,14 @@
                                 matTooltipClass="tooltip">
                       <mat-option [value]="''">
                         None
-                      </mat-option>
+                </mat-option>
                       <mat-option
                         *ngFor="let camStream of cam.value.streams | mapToKeyValue | excludeOwnStream:stream.key"
                         [value]="cam.key+'.'+camStream.key">
                         {{camStream.key}}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
                 </td>
               </ng-container>
               <ng-container matColumnDef="mask_file">
@@ -317,11 +332,11 @@
                               matTooltipClass="tooltip">
                         <mat-icon>close</mat-icon>
                       </button>
-                    </div>
+        </div>
                     <mat-error *ngIf="getStreamControl(camIndex, streamIndex, 'mask_file')">Please select a valid .pgm
                       file, or clear.
                     </mat-error>
-                  </mat-form-field>
+          </mat-form-field>
                 </td>
               </ng-container>
               <ng-container matColumnDef="video_width">
@@ -335,7 +350,7 @@
                            placeholder="Video Width" (blur)="updateStreamField(camIndex, streamIndex, 'video_width')">
                     <mat-error *ngIf="getStreamControl(camIndex, streamIndex,'video_width').invalid">Valid: 90-5000
                     </mat-error>
-                  </mat-form-field>
+          </mat-form-field>
                 </td>
               </ng-container>
               <ng-container matColumnDef="video_height">
@@ -350,7 +365,7 @@
                            (blur)="updateStreamField(camIndex, streamIndex, 'video_height')">
                     <mat-error *ngIf="getStreamControl(camIndex, streamIndex,'video_height').invalid">Valid: 90-3000
                     </mat-error>
-                  </mat-form-field>
+          </mat-form-field>
                 </td>
               </ng-container>
 
@@ -371,7 +386,7 @@
               <tr mat-row *matRowDef="let stream; columns: streamColumns"></tr>
               <tr mat-footer-row *matFooterRowDef="streamFooterColumns"></tr>
             </table>
-          </div>
+      </div>
         </td>
       </ng-container>
 
@@ -385,26 +400,26 @@
             matTooltip="Add another camera."
             matTooltipClass="tooltip">
             <mat-icon>add</mat-icon>
-          </button>
+        </button>
           <button [disabled]="anyInvalid() || confirmSave" mat-icon-button (click)="confirmNew=true"
                   matTooltip="Start a new configuration"
-                  matTooltipClass="tooltip"
+                matTooltipClass="tooltip"
                   *ngIf="!confirmNew && !confirmNewLookup">
             <mat-icon>note</mat-icon>
-          </button>
+        </button>
           <button [disabled]="confirmSave || confirmNewLookup" mat-icon-button (click)="confirmNewLookup=true"
                   matTooltip="Perform onvif LAN search for cameras"
-                  matTooltipClass="tooltip"
+                matTooltipClass="tooltip"
                   *ngIf="!confirmNewLookup && !confirmNewLookup">
             <mat-icon>explore</mat-icon>
           </button>
-          <span matTooltip="Commit the current configuration in this editor"
+          <span matTooltip="{{'Commit the current configuration in this editor'}}"
                 matTooltipClass="tooltip">
             <button [disabled]="anyInvalid() || confirmNew || confirmNewLookup" mat-icon-button
                     (click)="confirmSave=true"
-                  *ngIf="!confirmSave && !confirmNewLookup">
-            <mat-icon>save</mat-icon>
-          </button>
+                    *ngIf="!confirmSave && !confirmNewLookup">
+              <mat-icon>save</mat-icon>
+            </button>
           </span>
 
           <span class="confirm-group" *ngIf="confirmNew">
@@ -420,7 +435,7 @@
             <span>Start Onvif camera search, are you sure?</span>
             <button color="default" mat-flat-button (click)="confirmNewLookup=false">
               Cancel
-            </button>
+        </button>
             <button color="warning" mat-flat-button (click)="startOnvifSearch();confirmNewLookup=false;">
               Search
             </button>
@@ -429,7 +444,7 @@
             <span>Save this as the working configuration, are you sure?</span>
             <button color="default" mat-flat-button (click)="confirmSave=false">
               Cancel
-            </button>
+        </button>
             <button color="warning" mat-flat-button (click)="commitConfig();confirmSave=false;">
               Save
             </button>
@@ -447,7 +462,7 @@
       </tr>
       <tr mat-footer-row *matFooterRowDef="cameraFooterColumns"></tr>
     </table>
-  </mat-card-content>
-</mat-card>
+    </mat-card-content>
+  </mat-card>
 
 <app-reporting #errorReporting></app-reporting>
