--- a/cloudFrontEnd/src/app/recording-control/recording-control.component.html
+++ b/cloudFrontEnd/src/app/recording-control/recording-control.component.html
@@ -25,7 +25,7 @@
       </div>
       <div *ngIf="!downloading" [ngSwitch]="confirmDelete" class="delete-button-set">
         <div *ngSwitchCase="false"
-             matTooltip="Delete the currently selected recording"
+             matTooltip="{{'Delete the currently selected recording'}}"
              matTooltipClass="tooltip">
           <button (click)="confirmDelete=true" color="warning" mat-flat-button
                   matTooltip="Delete the currently displayed recording" matTooltipClass="tooltip">
