--- a/cloudFrontEnd/src/app/change-password/change-password.component.html
+++ b/cloudFrontEnd/src/app/change-password/change-password.component.html
@@ -12,6 +12,7 @@
         <mat-form-field appearance="standard">
           <mat-label>Current Password</mat-label>
           <input matInput type="password" [formControl]="getFormControl('oldPassword')"
+                 autocomplete="off"
                  matTooltip="Enter the current password"
                  matTooltipClass="tooltip"
                  placeholder="Enter current password">
