--- a/cloudFrontEnd/src/app/nav/nav.component.scss
+++ b/cloudFrontEnd/src/app/nav/nav.component.scss
@@ -91,3 +91,34 @@ div.float-right-on-full-width
 .navbar-toggler {
   order: 10;
 }
+
+div.no-transport-warning {
+  margin-top: 1rem;
+  width: 100%;
+  > div {
+    border-radius: 2.0rem;
+    margin: auto;
+    width: fit-content;
+    padding: 1rem;
+    background-color: black;
+    > mat-card-title {
+      animation: pulsing 1300ms infinite;
+      background-color: transparent
+    }
+  }
+}
+
+.audio-out-active {
+  animation: pulsing 1300ms infinite;
+}
+@keyframes pulsing {
+  0% {
+    color: red;
+  }
+  50% {
+    color: #ef8484;
+  }
+  100% {
+    color: red;
+  }
+}
