Use websocket to signal loss off connection to ActiveMQ, with call to isTransportActive to get initial state.

--- a/cloudFrontEnd/src/app/nav/nav.component.html
+++ b/cloudFrontEnd/src/app/nav/nav.component.html
@@ -152,11 +152,11 @@
     Logout from Security Cam, Are you sure?
   </mat-card-subtitle>
   <mat-card-content>
-    <button mat-flat-button color="warning" (click)="logOff(true)">Confirm</button>
-    <button mat-flat-button color="default" (click)="logOff(false)">Cancel</button>
+    <button mat-flat-button color="warn" (click)="logOff(true)">Confirm</button>
+    <button mat-flat-button color="primary" (click)="logOff(false)">Cancel</button>
   </mat-card-content>
 </mat-card>
-<div *ngIf="!IsMQConnected" class="no-transport-warning">
+<div *ngIf="!utilsService.activeMQTransportActive" class="no-transport-warning">
   <div>
     <mat-card-title>Not Connected To Transport</mat-card-title>
   </div>
